--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <div class="sqr" id="7"></div>
     <div class="sqr" id="8"></div>
   </section>
-
+ 
   <button class="buttonn">Reset</button>
+  <button id ="FiveBy">5 by 4</button>
   <button id ="FourBy">4 by 4</button>
   <button id ="ThreeBy">3 by 3</button>
   <button id ="auto">Player versus AI</button>
