Small fix to image address

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="MainView"> 
   <div id="AlertCard"> 
 
-   <img  id ="img" src = "/assets/GENKUB - Greeting robot@1-2056x1210.png"> 
+   <img  id ="img" src = "./assets/GENKUB-Greetingrobot@1-2056x1210.png"> 
 
    <div id="grid">
     
